--- a/infos.html
+++ b/infos.html
@@ -21,7 +21,7 @@
 
 		<div id="contenuprincipal">
 			<p>
-				Anibot Allumer
+				Anibot/Allumer
 			<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
 			</p>
 		</div>
